--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 	"license": "MIT",
 	"scripts": {
 		"start": "node build/index.js",
-		"dev": "tsc-watch --onSuccess \"yarn start\""
+		"dev": "tsc-watch --onSuccess \"yarn start\"",
+		"build": "tsc -b"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.17",
@@ -22,5 +23,8 @@
 		"express": "^4.18.2",
 		"graphql": "^16.7.1",
 		"mongoose": "^7.4.2"
+	},
+	"engines": {
+		"node": ">=14.20.1"
 	}
 }
