--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.17",
+		"@types/jsonwebtoken": "^9.0.2",
 		"tsc-watch": "^6.0.4",
 		"typescript": "^5.1.6"
 	},
@@ -22,6 +23,7 @@
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"graphql": "^16.7.1",
+		"jsonwebtoken": "^9.0.1",
 		"mongoose": "^7.4.2"
 	},
 	"engines": {
